deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: myapp-deployment
    namespace: dev
    labels:
        app: nginx
        type: front-end
spec:
    replicas: 3
    selector:
        matchLabels:
            app: nginx
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
            - name: nginx
              image: nginx
              ports:
              - containerPort: 80
              resources:
                requests:
                  memory: "128Mi"
                  cpu: "500m"
                limits:
                  memory: "256Mi"
                  cpu: "1"
